Added snapshot API
